--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
-# For PDF to Word conversion
-pypdf2==3.0.1          # For handling PDF files (optional, depending on your needs)
-pdfplumber==0.9.0      # For extracting text and images from PDFs
-pdf2docx==0.5.6        # For converting PDF to Word
-
-# For Word to PDF conversion
-python-docx==0.8.11    # For handling .docx files
-reportlab==3.6.13      # For generating PDF files
-
-# Utility libraries
-tkinter==0.1.0         # For building a graphical user interface (if needed)
-PyQt5==5.15.7          # Optional: For a more sophisticated GUI with PyQt
-watchdog==2.1.9        # Optional: For monitoring file system changes
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+docx2pdf==0.1.8
+fire==0.6.0
+Flask==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+lxml==5.3.0
+MarkupSafe==2.1.5
+pdf2docx==0.5.1
+PyMuPDF==1.24.10
+PyMuPDFb==1.24.10
+PyPDF2==3.0.1
+python-docx==1.1.2
+pywin32==306
+six==1.16.0
+termcolor==2.4.0
+tqdm==4.66.5
+typing_extensions==4.12.2
+Werkzeug==3.0.4
