--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ PyMuPDF==1.24.10
 PyMuPDFb==1.24.10
 PyPDF2==3.0.1
 python-docx==1.1.2
-pywin32==306
+pywin32
 six==1.16.0
 termcolor==2.4.0
 tqdm==4.66.5
